<package format="3">
  <name>hsrb_moveit_plugins</name>
  <version>2.0.0</version>
  <description>HSR specific plugins for MoveIt</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Keisuke Takeshita</author>
  <author>Koji Terada</author>
  <author>Tamaki Nishino</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hsrb_analytic_ik</depend>
  <depend>moveit_core</depend>
  <depend>tf2_eigen</depend>
  <depend>tmc_robot_kinematics_model</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
